...
			<Box w="full" justifyContent="center" alignItems="center">
				<HorizontalDivider label="or" mt="100" />

				<Button
					my="4"
					type="secondary"
					label="Sign Up Now"
					onPress={() => navigation.push("SignUp")}
				/>
			</Box>
		</PageView>
	);
}
...
